Fix issue with clipping path of audio file

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 html, body {
 margin: 0;
 height: calc(100vh + 3em);
-background-color: #012;
+background-color: #300;
 
 display: flex;
 flex-direction: column;
